apps/translator-api/overlays/staging/translator-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translator-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  rules:
    - host: transcribe.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: translator-api
                port:
                  number: 8000
            path: /backend
            pathType: Prefix
  tls:
    - hosts:
        - transcribe.contextsuite.com
      secretName: star-contextsuite-com
